@@ -1,21 +1,39 @@
 #include "BreakpointDialog.h"
 #include "DebuggerData.h"
+#include "DebugSession.h"
 #include "Convert.h"
-
-BreakpointDialog::BreakpointDialog(const MemoryLayout& ml, QWidget* parent)
-	: QDialog(parent), memLayout(ml)
+#include <QCompleter>
+#include <QStandardItemModel>
+#include <QDebug>
+BreakpointDialog::BreakpointDialog(const MemoryLayout& ml, DebugSession *session, QWidget* parent)
+	: QDialog(parent), memLayout(ml), currentSymbol(0)
 {
 	setupUi(this);
 
+	debugSession = session;
+	if( session ) {
+		// create address completer
+		QCompleter *completer = new QCompleter(session->symbolTable().labelList(), this);
+		completer->setCaseSensitivity(Qt::CaseInsensitive);
+		edtAddress->setCompleter(completer);
+		connect(completer,  SIGNAL(activated(const QString&)), this, SLOT(addressChanged(const QString&)));
+	}
+
+	connect(edtAddress,  SIGNAL(textEdited(const QString&)), this, SLOT(addressChanged(const QString&)));
 	connect(cmbxSlot,    SIGNAL(activated(int)), this, SLOT(slotChanged(int)));
 	connect(cmbxSubslot, SIGNAL(activated(int)), this, SLOT(subslotChanged(int)));
 
 	slotChanged(0);
+	cmbxSlot->setEnabled(false);
+	idxSlot = idxSubSlot = 0;
 }
 
 int BreakpointDialog::address()
 {
-	return stringToValue(edtAddress->text());
+	if(currentSymbol)
+		return currentSymbol->value();
+	else
+		return stringToValue(edtAddress->text());
 }
 
 int BreakpointDialog::slot()
@@ -33,15 +51,88 @@ int BreakpointDialog::segment()
 	return cmbxSegment->currentIndex() - 1;
 }
 
-void BreakpointDialog::slotChanged(int i)
+void BreakpointDialog::addressChanged(const QString& text)
 {
-	if (i) {
-		if (memLayout.isSubslotted[i - 1]) {
-			cmbxSubslot->setEnabled(true);
+	int addr = stringToValue(text);
+	if (addr == -1 && debugSession) {
+		// try finding a label
+		currentSymbol = debugSession->symbolTable().getAddressSymbol(text);
+		if (!currentSymbol) currentSymbol = debugSession->symbolTable().getAddressSymbol(text, Qt::CaseInsensitive);
+		if (currentSymbol) addr = currentSymbol->value();
+	}
+
+	QStandardItemModel* model = qobject_cast<QStandardItemModel*>(cmbxSlot->model());
+	if (addr == -1) {
+		QPalette pal;
+		pal.setColor(QPalette::Text, Qt::red);
+		edtAddress->setPalette(pal);
+		cmbxSlot->setCurrentIndex(0);
+		cmbxSlot->setEnabled(false);
+	} else {
+		QPalette pal;
+		pal.setColor(QPalette::Text, Qt::black);
+		edtAddress->setPalette(pal);		
+		cmbxSlot->setEnabled(true);
+
+		if(currentSymbol) {
+			// enable allowed slots
+			int s = currentSymbol->validSlots();
+			int num = 0, last = 0;
+			for(int i = 4; i >= 0; i--) {
+				QModelIndex index = model->index(i, 0, cmbxSlot->rootModelIndex());
+				if(i) {
+					bool ena = (s & (15<<(4*(i-1)))) != 0;
+					model->itemFromIndex(index)->setEnabled(ena);
+					if(ena) {
+						num++;
+						last = i;
+					}	
+				} else {
+					model->itemFromIndex(index)->setEnabled( num == 4 );
+					if(num == 4) last = 0;
+				}
+			}
+			cmbxSlot->setCurrentIndex(last);
 		} else {
-			cmbxSubslot->setEnabled(false);
-			cmbxSubslot->setCurrentIndex(0);
+			// enable everything
+			for(int i = 0; i < 5; i++) {
+				QModelIndex index = model->index(i, 0, cmbxSlot->rootModelIndex());
+				model->itemFromIndex(index)->setEnabled(true);
+			}
+			cmbxSlot->setCurrentIndex(idxSlot);
 		}
+	}
+	slotChanged(cmbxSlot->currentIndex());
+}
+
+void BreakpointDialog::slotChanged(int s)
+{
+	if(!currentSymbol) idxSlot = s;
+	if (s && memLayout.isSubslotted[s - 1]) {
+		if(currentSymbol) {
+			// enable subslots
+			int v = (currentSymbol->validSlots() >> (4*(s-1))) & 15;
+			int num = 0, last = 0;
+				QStandardItemModel* model = qobject_cast<QStandardItemModel*>(cmbxSubslot->model());
+			for(int i = 4; i >= 0; i--) {
+				QModelIndex index = model->index(i, 0, cmbxSubslot->rootModelIndex());
+				if(i) {
+					bool ena = (v & (1<<(i-1))) != 0;
+					model->itemFromIndex(index)->setEnabled(ena);
+					if(ena) {
+						num++;
+						last = i;
+					}	
+				} else {
+					model->itemFromIndex(index)->setEnabled( num == 4 );
+					if(num == 4) last = 0;
+				}
+			}
+			cmbxSubslot->setCurrentIndex(last);
+		} else {
+			cmbxSubslot->setCurrentIndex(idxSubSlot);
+		}
+		cmbxSubslot->setEnabled(true);
 	} else {
 		cmbxSubslot->setEnabled(false);
 		cmbxSubslot->setCurrentIndex(0);
@@ -51,6 +142,7 @@ void BreakpointDialog::slotChanged(int i)
 
 void BreakpointDialog::subslotChanged(int i)
 {
+	if(!currentSymbol) idxSubSlot = i;
 	cmbxSegment->clear();
 	cmbxSegment->addItem("any");
 
