@@ -1,5 +1,8 @@
 $Id$
 
+2012-05-19 Edwin Velds <e.velds@gmail.com>
+	* Added ability to add breakpoints by label
+
 2011-03-06 Edwin Velds <e.velds@gmail.com>
 	* Added support for step_back
 	* Added a workaround for step_over leaving a breakpoint
